Test run of everything (except Allen); GAN is failing oddly

--- a/IntroPyTorch.ipynb
+++ b/IntroPyTorch.ipynb
@@ -57,14 +57,14 @@
      "output_type": "stream",
      "text": [
       "Random 2-D tensor\n",
-      "tensor([[-0.1671,  2.2173,  1.8600],\n",
-      "        [-0.3152, -0.0601, -1.4995],\n",
-      "        [ 0.4635,  0.2840,  0.0924]], requires_grad=True)\n",
+      "tensor([[-1.0926,  0.9136,  0.0797],\n",
+      "        [ 0.2230, -1.3284,  0.1227],\n",
+      "        [ 0.3646, -0.6014,  0.3973]], requires_grad=True)\n",
       "\n",
       "Random 2-D shifted by 7, multiplied by 5\n",
-      "tensor([[34.1646, 46.0866, 44.2998],\n",
-      "        [33.4239, 34.6994, 27.5025],\n",
-      "        [37.3175, 36.4199, 35.4619]], grad_fn=<MulBackward0>)\n"
+      "tensor([[29.5371, 39.5679, 35.3986],\n",
+      "        [36.1149, 28.3578, 35.6135],\n",
+      "        [36.8229, 31.9929, 36.9864]], grad_fn=<MulBackward0>)\n"
      ]
     }
    ],
@@ -121,12 +121,12 @@
      "output_type": "stream",
      "text": [
       "Multiplied by 3\n",
-      "tensor([[102.4939, 138.2597, 132.8994],\n",
-      "        [100.2718, 104.0982,  82.5074],\n",
-      "        [111.9526, 109.2598, 106.3857]], grad_fn=<MulBackward0>)\n",
+      "tensor([[ 88.6114, 118.7036, 106.1959],\n",
+      "        [108.3447,  85.0734, 106.8406],\n",
+      "        [110.4687,  95.9787, 110.9593]], grad_fn=<MulBackward0>)\n",
       "\n",
       "Mean of values\n",
-      "tensor(109.7920, grad_fn=<MeanBackward0>)\n"
+      "tensor(103.4640, grad_fn=<MeanBackward0>)\n"
      ]
     }
    ],
@@ -150,11 +150,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  --> <MeanBackward0 object at 0x7fa6f625f810>\n",
-      "   --> <MulBackward0 object at 0x7fa6f625fb50>\n",
-      "    --> <MulBackward0 object at 0x7fa6f625fe90>\n",
-      "     --> <AddBackward0 object at 0x7fa6f6264210>\n",
-      "      --> <AccumulateGrad object at 0x7fa6f6264550>\n"
+      "  --> <MeanBackward0 object at 0x7f4ebb1296d0>\n",
+      "   --> <MulBackward0 object at 0x7f4ebb129a10>\n",
+      "    --> <MulBackward0 object at 0x7f4ebb129d50>\n",
+      "     --> <AddBackward0 object at 0x7f4ebb12f0d0>\n",
+      "      --> <AccumulateGrad object at 0x7f4ebb12f490>\n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<MeanBackward0 object at 0x7fa6f625f290>\n"
+      "<MeanBackward0 object at 0x7f4ebb129350>\n"
      ]
     },
     {
@@ -388,17 +388,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration:    0 - Loss: 3.75e+07\n",
-      "Iteration:   50 - Loss: 2.13e+04\n",
-      "Iteration:  100 - Loss: 1.24e+03\n",
-      "Iteration:  150 - Loss: 1.38e+02\n",
-      "Iteration:  200 - Loss: 2.05e+01\n",
-      "Iteration:  250 - Loss: 3.45e+00\n",
-      "Iteration:  300 - Loss: 6.12e-01\n",
-      "Iteration:  350 - Loss: 1.12e-01\n",
-      "Iteration:  400 - Loss: 2.08e-02\n",
-      "Iteration:  450 - Loss: 4.20e-03\n",
-      "Iteration:  500 - Loss: 1.05e-03\n"
+      "Iteration:    0 - Loss: 3.36e+07\n",
+      "Iteration:   50 - Loss: 1.02e+04\n",
+      "Iteration:  100 - Loss: 3.84e+02\n",
+      "Iteration:  150 - Loss: 2.95e+01\n",
+      "Iteration:  200 - Loss: 2.94e+00\n",
+      "Iteration:  250 - Loss: 3.26e-01\n",
+      "Iteration:  300 - Loss: 3.83e-02\n",
+      "Iteration:  350 - Loss: 4.89e-03\n",
+      "Iteration:  400 - Loss: 8.45e-04\n",
+      "Iteration:  450 - Loss: 2.35e-04\n",
+      "Iteration:  500 - Loss: 9.48e-05\n"
      ]
     }
    ],
@@ -453,17 +453,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration:    0 - Loss: 4.322e+07\n",
-      "Iteration:   50 - Loss: 1.048e+04\n",
-      "Iteration:  100 - Loss: 4.126e+02\n",
-      "Iteration:  150 - Loss: 3.386e+01\n",
-      "Iteration:  200 - Loss: 3.697e+00\n",
-      "Iteration:  250 - Loss: 4.618e-01\n",
-      "Iteration:  300 - Loss: 6.232e-02\n",
-      "Iteration:  350 - Loss: 9.040e-03\n",
-      "Iteration:  400 - Loss: 1.618e-03\n",
-      "Iteration:  450 - Loss: 4.389e-04\n",
-      "Iteration:  500 - Loss: 1.704e-04\n"
+      "Iteration:    0 - Loss: 3.103e+07\n",
+      "Iteration:   50 - Loss: 1.431e+04\n",
+      "Iteration:  100 - Loss: 5.635e+02\n",
+      "Iteration:  150 - Loss: 3.852e+01\n",
+      "Iteration:  200 - Loss: 3.567e+00\n",
+      "Iteration:  250 - Loss: 4.076e-01\n",
+      "Iteration:  300 - Loss: 5.376e-02\n",
+      "Iteration:  350 - Loss: 7.986e-03\n",
+      "Iteration:  400 - Loss: 1.515e-03\n",
+      "Iteration:  450 - Loss: 4.270e-04\n",
+      "Iteration:  500 - Loss: 1.684e-04\n"
      ]
     }
    ],
@@ -525,19 +525,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration:    0 - Loss: 7.363e+02\n",
-      "Iteration:   50 - Loss: 3.569e+01\n",
-      "Iteration:  100 - Loss: 1.933e+00\n",
-      "Iteration:  150 - Loss: 1.858e-01\n",
-      "Iteration:  200 - Loss: 2.464e-02\n",
-      "Iteration:  250 - Loss: 4.037e-03\n",
-      "Iteration:  300 - Loss: 7.703e-04\n",
-      "Iteration:  350 - Loss: 1.642e-04\n",
-      "Iteration:  400 - Loss: 3.803e-05\n",
-      "Iteration:  450 - Loss: 9.348e-06\n",
-      "Iteration:  500 - Loss: 2.393e-06\n",
-      "CPU times: user 7.84 s, sys: 20.2 ms, total: 7.86 s\n",
-      "Wall time: 491 ms\n"
+      "Iteration:    0 - Loss: 6.176e+02\n",
+      "Iteration:   50 - Loss: 2.973e+01\n",
+      "Iteration:  100 - Loss: 2.004e+00\n",
+      "Iteration:  150 - Loss: 2.220e-01\n",
+      "Iteration:  200 - Loss: 3.119e-02\n",
+      "Iteration:  250 - Loss: 4.925e-03\n",
+      "Iteration:  300 - Loss: 8.408e-04\n",
+      "Iteration:  350 - Loss: 1.527e-04\n",
+      "Iteration:  400 - Loss: 2.932e-05\n",
+      "Iteration:  450 - Loss: 5.918e-06\n",
+      "Iteration:  500 - Loss: 1.250e-06\n",
+      "CPU times: user 8min 8s, sys: 1.26 s, total: 8min 10s\n",
+      "Wall time: 1min 28s\n"
      ]
     }
    ],
@@ -738,12 +738,12 @@
      "output_type": "stream",
      "text": [
       "Using CUDA\n",
-      "Loss after training: 1.5837546015973203e-05\n",
-      "Time elapsed: 0.46 seconds\n",
+      "Loss after training: 1.0340831977373455e-06\n",
+      "Time elapsed: 0.35 seconds\n",
       "\n",
       "Using CPU\n",
-      "Loss after training: 2.24868449549831e-06\n",
-      "Time elapsed: 0.48 seconds\n",
+      "Loss after training: 9.273626346839592e-07\n",
+      "Time elapsed: 80.72 seconds\n",
       "\n"
      ]
     }
