--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -47,15 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8, 6)\n",
-      "GeForce RTX 3090\n"
+      "(7, 5)\n",
+      "TITAN RTX\n"
      ]
     }
    ],
