--- a/NetworkExamples_5.ipynb
+++ b/NetworkExamples_5.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,11 +220,11 @@
      "output_type": "stream",
      "text": [
       "Initial\n",
-      "tensor([[-1.5592, -1.7667, -1.4604, -1.6743, -1.6133],\n",
-      "        [-1.6041, -1.7337, -1.4920, -1.6268, -1.6055],\n",
-      "        [-1.5127, -1.8201, -1.5068, -1.5673, -1.6742],\n",
-      "        [-1.5733, -1.7121, -1.4899, -1.6639, -1.6226],\n",
-      "        [-1.5781, -1.6812, -1.6020, -1.6052, -1.5840]])\n"
+      "tensor([[-1.6904, -1.5788, -1.8202, -1.2764, -1.7820],\n",
+      "        [-1.6655, -1.6369, -1.8055, -1.3078, -1.7064],\n",
+      "        [-1.6411, -1.5620, -1.7839, -1.3141, -1.8337],\n",
+      "        [-1.6930, -1.5645, -1.8812, -1.2537, -1.7780],\n",
+      "        [-1.6265, -1.5197, -1.8502, -1.3142, -1.8406]])\n"
      ]
     }
    ],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -354,59 +354,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>the</td>\n",
-       "      <td>-0.013743</td>\n",
-       "      <td>-6.239648</td>\n",
-       "      <td>-5.008960</td>\n",
-       "      <td>-5.415964</td>\n",
-       "      <td>-7.459838</td>\n",
+       "      <th>the</th>\n",
+       "      <td>-0.030166</td>\n",
+       "      <td>-3.688640</td>\n",
+       "      <td>-5.609136</td>\n",
+       "      <td>-6.964087</td>\n",
+       "      <td>-9.207769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>dog</td>\n",
-       "      <td>-6.495167</td>\n",
-       "      <td>-0.012434</td>\n",
-       "      <td>-6.665903</td>\n",
-       "      <td>-4.823316</td>\n",
-       "      <td>-6.480805</td>\n",
+       "      <th>dog</th>\n",
+       "      <td>-3.916339</td>\n",
+       "      <td>-0.047079</td>\n",
+       "      <td>-3.649526</td>\n",
+       "      <td>-10.716791</td>\n",
+       "      <td>-9.925861</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>read</td>\n",
-       "      <td>-5.277414</td>\n",
-       "      <td>-7.667194</td>\n",
-       "      <td>-0.010107</td>\n",
-       "      <td>-7.972817</td>\n",
-       "      <td>-5.487593</td>\n",
+       "      <th>read</th>\n",
+       "      <td>-4.942734</td>\n",
+       "      <td>-5.932009</td>\n",
+       "      <td>-0.014016</td>\n",
+       "      <td>-6.084906</td>\n",
+       "      <td>-6.290926</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>the</td>\n",
-       "      <td>-0.009360</td>\n",
-       "      <td>-6.717165</td>\n",
-       "      <td>-5.100127</td>\n",
-       "      <td>-6.390607</td>\n",
-       "      <td>-8.007298</td>\n",
+       "      <th>the</th>\n",
+       "      <td>-0.015536</td>\n",
+       "      <td>-4.927171</td>\n",
+       "      <td>-5.027011</td>\n",
+       "      <td>-6.488432</td>\n",
+       "      <td>-9.319033</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>book</td>\n",
-       "      <td>-4.429600</td>\n",
-       "      <td>-0.048896</td>\n",
-       "      <td>-5.763106</td>\n",
-       "      <td>-3.523305</td>\n",
-       "      <td>-5.757827</td>\n",
+       "      <th>book</th>\n",
+       "      <td>-5.623885</td>\n",
+       "      <td>-0.005487</td>\n",
+       "      <td>-6.353067</td>\n",
+       "      <td>-10.869853</td>\n",
+       "      <td>-9.201809</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           DET      NOUN      VERB      PRON      PART\n",
-       "the  -0.013743 -6.239648 -5.008960 -5.415964 -7.459838\n",
-       "dog  -6.495167 -0.012434 -6.665903 -4.823316 -6.480805\n",
-       "read -5.277414 -7.667194 -0.010107 -7.972817 -5.487593\n",
-       "the  -0.009360 -6.717165 -5.100127 -6.390607 -8.007298\n",
-       "book -4.429600 -0.048896 -5.763106 -3.523305 -5.757827"
+       "           DET      NOUN      VERB       PRON      PART\n",
+       "the  -0.030166 -3.688640 -5.609136  -6.964087 -9.207769\n",
+       "dog  -3.916339 -0.047079 -3.649526 -10.716791 -9.925861\n",
+       "read -4.942734 -5.932009 -0.014016  -6.084906 -6.290926\n",
+       "the  -0.015536 -4.927171 -5.027011  -6.488432 -9.319033\n",
+       "book -5.623885 -0.005487 -6.353067 -10.869853 -9.201809"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
