Tweaks to Intro notebooks

--- a/IntroPyTorch.ipynb
+++ b/IntroPyTorch.ipynb
@@ -57,14 +57,14 @@
      "output_type": "stream",
      "text": [
       "Random 2-D tensor\n",
-      "tensor([[-1.0926,  0.9136,  0.0797],\n",
-      "        [ 0.2230, -1.3284,  0.1227],\n",
-      "        [ 0.3646, -0.6014,  0.3973]], requires_grad=True)\n",
+      "tensor([[ 0.4873, -0.0964, -0.4215],\n",
+      "        [ 0.5729,  0.7441,  0.3611],\n",
+      "        [-0.2941, -1.6468, -0.4382]], requires_grad=True)\n",
       "\n",
       "Random 2-D shifted by 7, multiplied by 5\n",
-      "tensor([[29.5371, 39.5679, 35.3986],\n",
-      "        [36.1149, 28.3578, 35.6135],\n",
-      "        [36.8229, 31.9929, 36.9864]], grad_fn=<MulBackward0>)\n"
+      "tensor([[37.4363, 34.5181, 32.8927],\n",
+      "        [37.8646, 38.7206, 36.8054],\n",
+      "        [33.5296, 26.7661, 32.8092]], grad_fn=<MulBackward0>)\n"
      ]
     }
    ],
@@ -112,8 +112,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The gradient need not be—and generally is not—a single scalar.  Each element of the tensor has its own gradient."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random 2-D tensor\n",
+      "tensor([[-0.1821, -1.1361,  0.0790],\n",
+      "        [ 0.0242,  1.3428,  1.2493],\n",
+      "        [ 1.2199,  0.1031, -0.7720]], requires_grad=True)\n",
+      "\n",
+      "Random 2-D  multiplied by 2, 3, or 5\n",
+      "tensor([[-0.3642, -2.2722,  0.1579],\n",
+      "        [ 0.0727,  4.0283,  3.7479],\n",
+      "        [ 6.0993,  0.5154, -3.8602]], grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x2 = torch.randn(3, 3, requires_grad=True)\n",
+    "print(\"Random 2-D tensor\")\n",
+    "print(x2)\n",
+    "\n",
+    "# Perform an operation on tensor\n",
+    "mul = torch.tensor([[2, 2, 2], [3, 3, 3], [5, 5, 5]], dtype=torch.float)\n",
+    "y2 = x2 * mul\n",
+    "print(\"\\nRandom 2-D  multiplied by 2, 3, or 5\")\n",
+    "print(y2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[ 2.,  4.,  6.],\n",
+       "         [12., 15., 18.],\n",
+       "         [35., 40., 45.]]),\n",
+       " None)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's apply the various slopes to the tensor v\n",
+    "y2.grad_fn(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -121,12 +185,12 @@
      "output_type": "stream",
      "text": [
       "Multiplied by 3\n",
-      "tensor([[ 88.6114, 118.7036, 106.1959],\n",
-      "        [108.3447,  85.0734, 106.8406],\n",
-      "        [110.4687,  95.9787, 110.9593]], grad_fn=<MulBackward0>)\n",
+      "tensor([[112.3089, 103.5542,  98.6782],\n",
+      "        [113.5938, 116.1617, 110.4162],\n",
+      "        [100.5887,  80.2984,  98.4275]], grad_fn=<MulBackward0>)\n",
       "\n",
       "Mean of values\n",
-      "tensor(103.4640, grad_fn=<MeanBackward0>)\n"
+      "tensor(103.7808, grad_fn=<MeanBackward0>)\n"
      ]
     }
    ],
@@ -143,18 +207,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  --> <MeanBackward0 object at 0x7f4ebb1296d0>\n",
-      "   --> <MulBackward0 object at 0x7f4ebb129a10>\n",
-      "    --> <MulBackward0 object at 0x7f4ebb129d50>\n",
-      "     --> <AddBackward0 object at 0x7f4ebb12f0d0>\n",
-      "      --> <AccumulateGrad object at 0x7f4ebb12f490>\n"
+      "  --> <MeanBackward0 object at 0x7f2c181af350>\n",
+      "   --> <MulBackward0 object at 0x7f2b6e15b310>\n",
+      "    --> <MulBackward0 object at 0x7f2b6e15b650>\n",
+      "     --> <AddBackward0 object at 0x7f2b6e15b990>\n",
+      "      --> <AccumulateGrad object at 0x7f2b6e15bc90>\n"
      ]
     }
    ],
@@ -180,14 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<MeanBackward0 object at 0x7f4ebb129350>\n"
+      "<MeanBackward0 object at 0x7f2b6e15ba10>\n"
      ]
     },
     {
@@ -198,7 +262,7 @@
        "        [1.1111, 1.1111, 1.1111]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +287,7 @@
        "        [0.2222, 0.4444, 0.8889]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +319,7 @@
        "        [0.1667, 0.3700, 1.0111]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,28 +445,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration:    0 - Loss: 3.36e+07\n",
-      "Iteration:   50 - Loss: 1.02e+04\n",
-      "Iteration:  100 - Loss: 3.84e+02\n",
-      "Iteration:  150 - Loss: 2.95e+01\n",
-      "Iteration:  200 - Loss: 2.94e+00\n",
-      "Iteration:  250 - Loss: 3.26e-01\n",
-      "Iteration:  300 - Loss: 3.83e-02\n",
-      "Iteration:  350 - Loss: 4.89e-03\n",
-      "Iteration:  400 - Loss: 8.45e-04\n",
-      "Iteration:  450 - Loss: 2.35e-04\n",
-      "Iteration:  500 - Loss: 9.48e-05\n"
+      "Iteration:    0 - Loss: 2.73e+07\n",
+      "Iteration:   50 - Loss: 1.09e+04\n",
+      "Iteration:  100 - Loss: 3.39e+02\n",
+      "Iteration:  150 - Loss: 2.16e+01\n",
+      "Iteration:  200 - Loss: 1.91e+00\n",
+      "Iteration:  250 - Loss: 1.97e-01\n",
+      "Iteration:  300 - Loss: 2.20e-02\n",
+      "Iteration:  350 - Loss: 2.83e-03\n",
+      "Iteration:  400 - Loss: 5.42e-04\n",
+      "Iteration:  450 - Loss: 1.67e-04\n",
+      "Iteration:  500 - Loss: 7.13e-05\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
+    "# Expect ~2 min\n",
+    "\n",
     "# Randomly initialize weights\n",
     "w1 = torch.randn(D_in, H)   # E.g. 1000 x 100 weights\n",
     "w2 = torch.randn(H, D_out)  # E.g. 100 x 10 weight\n",
@@ -468,6 +535,9 @@
     }
    ],
    "source": [
+    "%%time\n",
+    "# Expect ~2 min\n",
+    "\n",
     "w1 = torch.randn(D_in, H, dtype=torch.float, requires_grad=True)\n",
     "w2 = torch.randn(H, D_out, dtype=torch.float, requires_grad=True)\n",
     "\n",
@@ -543,6 +613,7 @@
    ],
    "source": [
     "%%time\n",
+    "# Expect ~2 min\n",
     "\n",
     "# These layers are equivalent to the weight tensors `w1` and `w2`\n",
     "# Note: nn.Sequential is a Module which contains other Modules, and \n",
@@ -749,6 +820,7 @@
     }
    ],
    "source": [
+    "# Expect ~2 min\n",
     "from time import time\n",
     "\n",
     "for device in ['cuda', 'cpu']:\n",
@@ -822,9 +894,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
