--- a/NetworkExamples_0.ipynb
+++ b/NetworkExamples_0.ipynb
@@ -74,7 +74,7 @@
    "source": [
     "## A simple feature classifer\n",
     "\n",
-    "The next lesson is a slightly simplified version of a problem I worked on in at a former job at BoldMetrics Inc..  That company I worked for, as Chief Technology Officer, sold services to big and small clothing retailers to help guide their customers toward the best garment size for each customer.\n",
+    "The next lesson is a slightly simplified version of a problem I worked on at a former job.  The company sold services to big and small clothing retailers to help guide their customers toward the best garment size for each customer.\n",
     "\n",
     "We made these recommendations based on a survey of a few measurements that consumers tend to know about themselves.  The set of measurements are slightly different for men's versus women's sizes. Moreover, different retailers size their garments—and sometimes different garment categories or lines—differently from other retailers.  This is a case where some machine learning might illuminate the patterns of the relationship between body sizes and clothing sizes."
    ]
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First thing, let us read in some actual data used in one of our models.  In production, we do not use PyTorch, nor any DNN framework, but some more \"conventional\" machine learning techniques.  I was curious how a DNN might perform.  \n",
+    "First thing, let us read in some actual data used in one of our models.  In production, we did not use PyTorch, nor any DNN framework, but some more \"conventional\" machine learning techniques.  I was curious how a DNN might perform.  \n",
     "\n",
     "You can see that the features below are from some women customers and garments; the data is anonymized in the sense that any customer or garment numbers used by the retailer have been removed.  But the sizes of bodies and clothes are actual, as well as their distribution and interrelationships. The features `bra_size_cup` numerically encodes the letter-sizes used in American garments (e.g. 'A', 'B', 'C', 'D', etc); the other features all start out as numeric values, measured in years, inches, or pounds. (or the not-really-inches encoded by numeric shoe sizes)."
    ]
@@ -861,6 +861,7 @@
    ],
    "source": [
     "%%time\n",
+    "# Expect ~7 min\n",
     "do_training(model, X_train, target, optimizer, loss_fn, \n",
     "            early_stop=1001, quiet=True, epochs=1000)"
    ]
@@ -893,7 +894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
