--- a/NetworkExamples_1.ipynb
+++ b/NetworkExamples_1.ipynb
@@ -455,6 +455,7 @@
    ],
    "source": [
     "%%time\n",
+    "# Expect ~9 min\n",
     "early_stop = 4\n",
     "running_loss = []  # Every loss computation\n",
     "loss_history = []  # Intermittent averages\n",
@@ -618,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
