--- a/WhatIsML.ipynb
+++ b/WhatIsML.ipynb
@@ -738,9 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1130,7 +1128,7 @@
     "\n",
     "### Pooling layers\n",
     "\n",
-    "Pooling is especially useful in coordination with convolutions.  These combine a number of neurons (but not an entire prior layer) into a single neuron.  For example, a particular 5x5 region of a 2-D picture might use on neuron in a pooling layer to represent its brightness or typical hue."
+    "Pooling is especially useful in coordination with convolutions.  These combine a number of neurons (but not an entire prior layer) into a single neuron.  For example, a particular 5x5 region of a 2-D picture might use one neuron in a pooling layer to represent its brightness or typical hue."
    ]
   },
   {
@@ -1140,15 +1138,13 @@
     "### Activation functions\n",
     "\n",
     "An [activation function](https://en.wikipedia.org/wiki/Activation_function) describes the relationship between the inputs a neuron receives and its output.  The crucial thing an activation function needs is a non-linearity, which can be implemented in various ways.  The point, in main, is to let a neuron do *something* other than simply pass through the (scaled maybe) sum of its\n",
-    "inputs as its output; if it only did that, a neural network would simply be a linear regression, and more layers would be irrelevant.  Some typical activation functions used are [Rectified Linear Units (ReLU)](https://en.wikipedia.org/wiki/Rectifier_(neural_networks)), Leaky ReLUs, and [TanH](https://en.wikipedia.org/wiki/Hyperbolic_function#Hyperbolic_tangent).  Others are used as well."
+    "inputs as its output; if it only did that, a neural network would be similar to a mere a linear regression, and more layers would be irrelevant.  Some typical activation functions used are [Rectified Linear Units (ReLU)](https://en.wikipedia.org/wiki/Rectifier_(neural_networks)), Leaky ReLUs, and [TanH](https://en.wikipedia.org/wiki/Hyperbolic_function#Hyperbolic_tangent).  Others are used as well."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1403,9 +1399,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
