Minor stuff during teaching

--- a/NetworkExamples_5.ipynb
+++ b/NetworkExamples_5.ipynb
@@ -159,6 +159,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 'DET', 1: 'NOUN', 2: 'VERB', 3: 'PRON', 4: 'PART'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ix_to_tag"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -175,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,11 +240,11 @@
      "output_type": "stream",
      "text": [
       "Initial\n",
-      "tensor([[-1.6904, -1.5788, -1.8202, -1.2764, -1.7820],\n",
-      "        [-1.6655, -1.6369, -1.8055, -1.3078, -1.7064],\n",
-      "        [-1.6411, -1.5620, -1.7839, -1.3141, -1.8337],\n",
-      "        [-1.6930, -1.5645, -1.8812, -1.2537, -1.7780],\n",
-      "        [-1.6265, -1.5197, -1.8502, -1.3142, -1.8406]])\n"
+      "tensor([[-1.9123, -1.6146, -1.3586, -1.9964, -1.3454],\n",
+      "        [-1.8151, -1.6944, -1.3030, -2.0715, -1.3635],\n",
+      "        [-1.8041, -1.7082, -1.2787, -2.1108, -1.3679],\n",
+      "        [-1.8921, -1.6963, -1.2037, -2.1141, -1.4063],\n",
+      "        [-1.9861, -1.7753, -1.1097, -2.0744, -1.4352]])\n"
      ]
     }
    ],
@@ -282,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -293,6 +313,19 @@
       "\n",
       "we[PRON] dog[VERB] the[DET] dog[NOUN] \n",
       "\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'cat'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-8e341dd55d3d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0msentence\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprepare_sequence\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msentence\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mword_to_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscores\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msentence\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0mbest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-d01f5298570b>\u001b[0m in \u001b[0;36mprepare_sequence\u001b[0;34m(seq, tag_to_ix)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mprepare_sequence\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtag_to_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0midxs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mtag_to_ix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mseq\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midxs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlong\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-d01f5298570b>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mprepare_sequence\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtag_to_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0midxs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mtag_to_ix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mseq\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midxs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlong\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'cat'"
      ]
     }
    ],
@@ -321,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -355,58 +388,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>the</th>\n",
-       "      <td>-0.030166</td>\n",
-       "      <td>-3.688640</td>\n",
-       "      <td>-5.609136</td>\n",
-       "      <td>-6.964087</td>\n",
-       "      <td>-9.207769</td>\n",
+       "      <td>-0.016768</td>\n",
+       "      <td>-6.337716</td>\n",
+       "      <td>-12.420343</td>\n",
+       "      <td>-5.188324</td>\n",
+       "      <td>-4.680531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>dog</th>\n",
-       "      <td>-3.916339</td>\n",
-       "      <td>-0.047079</td>\n",
-       "      <td>-3.649526</td>\n",
-       "      <td>-10.716791</td>\n",
-       "      <td>-9.925861</td>\n",
+       "      <td>-6.900440</td>\n",
+       "      <td>-0.017684</td>\n",
+       "      <td>-5.269708</td>\n",
+       "      <td>-5.400012</td>\n",
+       "      <td>-4.982149</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>read</th>\n",
-       "      <td>-4.942734</td>\n",
-       "      <td>-5.932009</td>\n",
-       "      <td>-0.014016</td>\n",
-       "      <td>-6.084906</td>\n",
-       "      <td>-6.290926</td>\n",
+       "      <td>-12.084168</td>\n",
+       "      <td>-4.923359</td>\n",
+       "      <td>-0.008504</td>\n",
+       "      <td>-7.148034</td>\n",
+       "      <td>-7.820117</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>the</th>\n",
-       "      <td>-0.015536</td>\n",
-       "      <td>-4.927171</td>\n",
-       "      <td>-5.027011</td>\n",
-       "      <td>-6.488432</td>\n",
-       "      <td>-9.319033</td>\n",
+       "      <td>-0.021018</td>\n",
+       "      <td>-6.351782</td>\n",
+       "      <td>-11.943238</td>\n",
+       "      <td>-5.036788</td>\n",
+       "      <td>-4.377756</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>book</th>\n",
-       "      <td>-5.623885</td>\n",
-       "      <td>-0.005487</td>\n",
-       "      <td>-6.353067</td>\n",
-       "      <td>-10.869853</td>\n",
-       "      <td>-9.201809</td>\n",
+       "      <td>-7.041872</td>\n",
+       "      <td>-0.008606</td>\n",
+       "      <td>-7.163514</td>\n",
+       "      <td>-6.143455</td>\n",
+       "      <td>-5.344822</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           DET      NOUN      VERB       PRON      PART\n",
-       "the  -0.030166 -3.688640 -5.609136  -6.964087 -9.207769\n",
-       "dog  -3.916339 -0.047079 -3.649526 -10.716791 -9.925861\n",
-       "read -4.942734 -5.932009 -0.014016  -6.084906 -6.290926\n",
-       "the  -0.015536 -4.927171 -5.027011  -6.488432 -9.319033\n",
-       "book -5.623885 -0.005487 -6.353067 -10.869853 -9.201809"
+       "            DET      NOUN       VERB      PRON      PART\n",
+       "the   -0.016768 -6.337716 -12.420343 -5.188324 -4.680531\n",
+       "dog   -6.900440 -0.017684  -5.269708 -5.400012 -4.982149\n",
+       "read -12.084168 -4.923359  -0.008504 -7.148034 -7.820117\n",
+       "the   -0.021018 -6.351782 -11.943238 -5.036788 -4.377756\n",
+       "book  -7.041872 -0.008606  -7.163514 -6.143455 -5.344822"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
