--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -54,8 +54,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8, 6)\n",
-      "GeForce RTX 3090\n"
+      "(8, 0)\n",
+      "A100-PCIE-40GB\n"
      ]
     }
    ],
@@ -186,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
