Clear out some notebooks

--- a/NetworkExamples_5.ipynb
+++ b/NetworkExamples_5.ipynb
@@ -240,15 +240,18 @@
      "output_type": "stream",
      "text": [
       "Initial\n",
-      "tensor([[-1.9123, -1.6146, -1.3586, -1.9964, -1.3454],\n",
-      "        [-1.8151, -1.6944, -1.3030, -2.0715, -1.3635],\n",
-      "        [-1.8041, -1.7082, -1.2787, -2.1108, -1.3679],\n",
-      "        [-1.8921, -1.6963, -1.2037, -2.1141, -1.4063],\n",
-      "        [-1.9861, -1.7753, -1.1097, -2.0744, -1.4352]])\n"
+      "tensor([[-1.3547, -2.0749, -1.6650, -1.3360, -1.8060],\n",
+      "        [-1.3896, -2.1053, -1.6724, -1.2897, -1.7966],\n",
+      "        [-1.3161, -2.0813, -1.7754, -1.3020, -1.7979],\n",
+      "        [-1.3585, -2.1329, -1.6767, -1.2693, -1.8551],\n",
+      "        [-1.4648, -2.0974, -1.4930, -1.3690, -1.7895]])\n",
+      "CPU times: user 1h 10min 16s, sys: 1.46 s, total: 1h 10min 18s\n",
+      "Wall time: 1min 14s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "# These will usually on the order of 32 or 64 dimensional for a \n",
     "# real-world vocabulary and training set size\n",
     "EMBEDDING_DIM = 6\n",
@@ -302,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -313,19 +316,6 @@
       "\n",
       "we[PRON] dog[VERB] the[DET] dog[NOUN] \n",
       "\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'cat'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-8e341dd55d3d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0msentence\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprepare_sequence\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msentence\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mword_to_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscores\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msentence\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0mbest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-d01f5298570b>\u001b[0m in \u001b[0;36mprepare_sequence\u001b[0;34m(seq, tag_to_ix)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mprepare_sequence\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtag_to_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0midxs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mtag_to_ix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mseq\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midxs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlong\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-d01f5298570b>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mprepare_sequence\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtag_to_ix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0midxs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mtag_to_ix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mseq\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midxs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlong\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'cat'"
      ]
     }
    ],
@@ -388,55 +378,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>the</th>\n",
-       "      <td>-0.016768</td>\n",
-       "      <td>-6.337716</td>\n",
-       "      <td>-12.420343</td>\n",
-       "      <td>-5.188324</td>\n",
-       "      <td>-4.680531</td>\n",
+       "      <td>-0.013677</td>\n",
+       "      <td>-4.579336</td>\n",
+       "      <td>-6.000936</td>\n",
+       "      <td>-7.202051</td>\n",
+       "      <td>-9.205869</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>dog</th>\n",
-       "      <td>-6.900440</td>\n",
-       "      <td>-0.017684</td>\n",
-       "      <td>-5.269708</td>\n",
-       "      <td>-5.400012</td>\n",
-       "      <td>-4.982149</td>\n",
+       "      <td>-5.432333</td>\n",
+       "      <td>-0.013926</td>\n",
+       "      <td>-4.680117</td>\n",
+       "      <td>-9.093295</td>\n",
+       "      <td>-9.615894</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>read</th>\n",
-       "      <td>-12.084168</td>\n",
-       "      <td>-4.923359</td>\n",
-       "      <td>-0.008504</td>\n",
-       "      <td>-7.148034</td>\n",
-       "      <td>-7.820117</td>\n",
+       "      <td>-5.151469</td>\n",
+       "      <td>-5.790681</td>\n",
+       "      <td>-0.023405</td>\n",
+       "      <td>-6.720822</td>\n",
+       "      <td>-4.336609</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>the</th>\n",
-       "      <td>-0.021018</td>\n",
-       "      <td>-6.351782</td>\n",
-       "      <td>-11.943238</td>\n",
-       "      <td>-5.036788</td>\n",
-       "      <td>-4.377756</td>\n",
+       "      <td>-0.006389</td>\n",
+       "      <td>-5.388932</td>\n",
+       "      <td>-6.539926</td>\n",
+       "      <td>-8.079222</td>\n",
+       "      <td>-9.963933</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>book</th>\n",
-       "      <td>-7.041872</td>\n",
-       "      <td>-0.008606</td>\n",
-       "      <td>-7.163514</td>\n",
-       "      <td>-6.143455</td>\n",
-       "      <td>-5.344822</td>\n",
+       "      <td>-4.399478</td>\n",
+       "      <td>-0.032691</td>\n",
+       "      <td>-4.348342</td>\n",
+       "      <td>-5.848291</td>\n",
+       "      <td>-5.505279</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            DET      NOUN       VERB      PRON      PART\n",
-       "the   -0.016768 -6.337716 -12.420343 -5.188324 -4.680531\n",
-       "dog   -6.900440 -0.017684  -5.269708 -5.400012 -4.982149\n",
-       "read -12.084168 -4.923359  -0.008504 -7.148034 -7.820117\n",
-       "the   -0.021018 -6.351782 -11.943238 -5.036788 -4.377756\n",
-       "book  -7.041872 -0.008606  -7.163514 -6.143455 -5.344822"
+       "           DET      NOUN      VERB      PRON      PART\n",
+       "the  -0.013677 -4.579336 -6.000936 -7.202051 -9.205869\n",
+       "dog  -5.432333 -0.013926 -4.680117 -9.093295 -9.615894\n",
+       "read -5.151469 -5.790681 -0.023405 -6.720822 -4.336609\n",
+       "the  -0.006389 -5.388932 -6.539926 -8.079222 -9.963933\n",
+       "book -4.399478 -0.032691 -4.348342 -5.848291 -5.505279"
       ]
      },
      "execution_count": 9,
@@ -481,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
